# matbuilder

./: Architecture  License-MIT  README.md  pyproject.toml  requirements.txt  run.py
matbuilder/: __init__.py  _version.py  cli.py  main.py
matbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
matbuilder/backends/: __init__.py  base.py  factory.py  pymatgen.py
matbuilder/config/: __init__.py  settings.py
matbuilder/core/: __init__.py  base.py  context.py  hooks.py  pipeline.py  registry.py
matbuilder/modules/: __init__.py  base.py
matbuilder/modules/bend/: __init__.py  module.py
matbuilder/modules/convert/: __init__.py  module.py
matbuilder/modules/strain/: __init__.py  models.py  module.py  operations.py
matbuilder/modules/struct2d/: __init__.py  module.py
matbuilder/modules/symmetry/: __init__.py  module.py
matbuilder/pipeline/: __init__.py  executor.py  workflow.py  yaml_parser.py
matbuilder/plugins/: __init__.py  base.py  manager.py
matbuilder/utils/: __init__.py  logging.py  validators.py
structs/: PCM.cif  PCM.vasp
structs/monolayer/: monolayer_Cu2Mn2.cif  monolayer_Cu2Mn2.vasp
structs/nanoribbon/: nanoribbon_H25Cu22Mn22Pd40_armchair_w5.cif  nanoribbon_H25Cu22Mn22Pd40_armchair_w5.vasp
structs/slab/: slab_Cu8Mn8Pd16_111.cif  slab_Cu8Mn8Pd16_111.vasp
structs/sliding_ferroelectric/: sliding_Cu2Mn2Pd4_sx0.500_sy0.000.cif  sliding_Cu2Mn2Pd4_sx0.500_sy0.000.vasp
structs/twisted/: twisted_Mo2S4_1.05deg.cif  twisted_Mo2S4_1.05deg.vasp
workflows/: strain_batch.yaml
(+6 files in other folders)
